test/resources/nameAnalyzer/failing/UndefinedConstructor2.amy
object Constructor
  abstract class Foo
  def foo(f: Foo): Foo := f match {
    case Bar(_) => f
  } end foo
end Constructor
